FIX: AI helper not being shown on mobile view

--- a/assets/stylesheets/modules/ai-helper/common/ai-helper.scss
+++ b/assets/stylesheets/modules/ai-helper/common/ai-helper.scss
@@ -608,5 +608,9 @@
 }
 
 .fk-d-menu[data-identifier="ai-composer-helper-menu"] {
-  z-index: z("composer", "dropdown");
+  z-index: z("composer", "content");
+}
+
+.mobile-view .fk-d-menu[data-identifier="ai-composer-helper-menu"] {
+  z-index: 1100;
 }
